--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -21,3 +21,18 @@
 img {
   margin: -20px 0 -30px 0;
 }
+
+.password-container {
+  position: relative;
+}
+
+.input-icon {
+  font-size: 1.2rem;
+  z-index: 10;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
