--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -34,5 +34,15 @@ img {
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 30px; 
+  height: 30px;
+}
+
+.input-icon:hover{
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
