--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -49,3 +49,17 @@ img {
 .password-requirements {
   margin-top: 0.7rem;
 }
+
+.captcha-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* center the CAPTCHA box */
+}
+
