feat: added buttons to show the next 10 results

--- a/src/pages/Insects.css
+++ b/src/pages/Insects.css
@@ -1,3 +1,4 @@
+
 .image-container {
   width: 100%;
   max-width: 15rem;  /* You can adjust this value */
@@ -6,6 +7,8 @@
 
 .image-container ion-img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 ul {
@@ -16,6 +19,14 @@ ul {
   width: 200px
 }
 
+
+
+#map-selected {
+  height: 200px; /*adjust as needed*/
+  width: 200px;
+  display: inline-block;
+  border: 3px solid red;
+}
 
 .card-container {
   max-width: 50rem;  /* You can adjust this value */
@@ -53,6 +64,10 @@ ul {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.modal-content-container ion-img{
+  max-height: 13rem;
 }
 
 .modal-content-container .common-name {
