--- a/src/pages/Insects.css
+++ b/src/pages/Insects.css
@@ -1,7 +1,7 @@
 
 .image-container {
   width: 100%;
-  max-width: 15rem;  /* You can adjust this value */
+  max-width: 15rem;  
   overflow: hidden;
 }
 
@@ -33,17 +33,14 @@ ul {
   width: 200px
 }
 
-
-
 #map-selected {
-  height: 200px; /*adjust as needed*/
+  height: 200px; 
   width: 200px;
   display: inline-block;
-  border: 3px solid red;
 }
 
 .card-container {
-  max-width: 50rem;  /* You can adjust this value */
+  max-width: 50rem; 
   margin: 0 auto;
   margin-bottom: 1.25rem;
 }
@@ -62,7 +59,7 @@ ul {
 }
 
 .common-name {
-  font-size: 1.5rem;  /* You can adjust this value */
+  font-size: 1.5rem;  
   font-weight: bold;
   text-align: center;
 }
@@ -89,7 +86,7 @@ ul {
 }
 
 .more-details {
-  margin-top: 1rem; /* Add gap above the more details section */
+  margin-top: 1rem; 
 }
 
 .centered-text {
