--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -4,6 +4,13 @@
   top: 15px;
 }
 
+.square-button {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+
 .observationImage {
   max-width: 30rem;
   height: auto;
