--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -10,6 +10,16 @@
   right: 5px;
 }
 
+.input-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.input-container input {
+  width: 90%;
+  box-sizing: border-box; 
+}
+
 .observationImage {
   max-width: 30rem;
   height: auto;
@@ -27,8 +37,7 @@
 }
 
 .cardContainer > * {
-  flex: 0 0 calc(50% - 20px);  
-
+  flex: 0 0 calc(50% - 20px);
 }
 
 @media (max-width: 768px) {
