--- a/src/pages/Insects.css
+++ b/src/pages/Insects.css
@@ -28,6 +28,29 @@
 
 ul {
   list-style: none;
+  padding: 0;
+  margin-top: 0;
+}
+
+.card-modal-content {
+  color: #4a4a4a;
+  line-height: 1.6;
+}
+
+.card-modal-content ul {
+  margin-top: 15px;
+  padding: 0 20px;
+  margin-right: 20px;
+}
+
+.card-modal-content ul li {
+  margin-bottom: 6px;
+}
+
+.fab-container{
+  position: fixed;
+  bottom: 70px;
+  right: 16px;
 }
 
 .card-container {
