--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -1,3 +1,45 @@
-.hidden-input{
+.hidden-input {
   display: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.upload-form {
+  display: grid;
+  gap: 20px; 
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.upload-picture {
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+.upload-form ion-item {
+  border-radius: 10px;
+  background-color: #fff;
+  transition: 0.3s;
+}
+
+.upload-form ion-item:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
+}
+
+.upload-form ion-button {
+  margin-top: 20px;
+  max-width: 90%;
+  margin: 0 auto;
+  color: #fff;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .upload-picture {
+    max-width: 80%;
+  }
 }
