--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -21,10 +21,11 @@
 }
 
 .observationImage {
-  max-width: 30rem;
+  max-width: 95%;
   height: auto;
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
+  margin-right: 20px;
 }
 
 .cardContainer {
