style: added media query to make image label container in a column on mobile and removed 80% width for the picture on mobile

--- a/src/pages/Profile/UploadObservation.css
+++ b/src/pages/Profile/UploadObservation.css
@@ -46,7 +46,7 @@
 
 /* Mobile styles */
 @media (max-width: 768px) {
-  .upload-picture {
-    max-width: 80%;
+  .image-label-container {
+    flex-direction: column
   }
 }
